# Copyright 2022-2023 David Robillard <d@drobilla.net>
# SPDX-License-Identifier: 0BSD OR ISC

option('fdgl', type: 'feature', yield: true,
       description: 'Build with force-directed graph layout support')

option('gir', type: 'feature', yield: true,
       description: 'Build GObject introspection data')

option('graphviz', type: 'feature', yield: true,
       description: 'Build with graphviz-based layout support')

option('light', type: 'boolean', value: false, yield: true,
       description: 'Use light-coloured theme')

option('nls', type: 'feature', yield: true,
       description: 'Build with native language support')

option('title', type: 'string', value: 'Ganv',
       description: 'Project title')
